--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -489,6 +489,7 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.212;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
@@ -1553,6 +1554,7 @@ allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
+allow 2a0e:fa00:0:d0::1;
 allow 2a0f:85c1:356:197a::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
@@ -1603,7 +1605,6 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 38.97.116.244;
-allow 44.205.189.101;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1667,6 +1668,7 @@ allow 45.82.120.134;
 allow 45.82.122.152;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.9.148.219;
 allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.95.169.184;
@@ -1747,6 +1749,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.85.95.205;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
