--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.28.199;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
+allow 107.189.3.11;
 allow 107.189.31.134;
 allow 107.189.31.225;
 allow 107.189.31.232;
@@ -487,7 +488,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.212;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
@@ -540,7 +540,6 @@ allow 190.211.254.97;
 allow 191.101.217.39;
 allow 191.252.220.31;
 allow 191.96.165.34;
-allow 192.153.57.191;
 allow 192.42.116.14;
 allow 192.42.116.15;
 allow 192.42.116.17;
@@ -603,19 +602,6 @@ allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.168.141.173;
-allow 193.189.100.194;
-allow 193.189.100.195;
-allow 193.189.100.196;
-allow 193.189.100.197;
-allow 193.189.100.198;
-allow 193.189.100.199;
-allow 193.189.100.200;
-allow 193.189.100.201;
-allow 193.189.100.202;
-allow 193.189.100.203;
-allow 193.189.100.204;
-allow 193.189.100.205;
-allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.178;
 allow 193.218.118.181;
@@ -921,7 +907,6 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
-allow 206.188.196.222;
 allow 207.154.227.3;
 allow 209.141.32.198;
 allow 209.141.38.110;
@@ -1060,6 +1045,7 @@ allow 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
+allow 2605:6400:30:efb2::;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1556,19 +1542,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:197a::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:df00:0:255::194;
-allow 2a0f:df00:0:255::195;
-allow 2a0f:df00:0:255::196;
-allow 2a0f:df00:0:255::197;
-allow 2a0f:df00:0:255::198;
-allow 2a0f:df00:0:255::199;
-allow 2a0f:df00:0:255::200;
-allow 2a0f:df00:0:255::201;
-allow 2a0f:df00:0:255::202;
-allow 2a0f:df00:0:255::203;
-allow 2a0f:df00:0:255::204;
-allow 2a0f:df00:0:255::205;
-allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
@@ -1577,6 +1550,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1707,7 +1681,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.45.32.131;
+allow 52.140.33.255;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1736,6 +1710,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.204.143.183;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1759,6 +1734,7 @@ allow 66.220.242.222;
 allow 66.78.40.147;
 allow 66.78.40.160;
 allow 67.219.109.141;
+allow 70.34.254.192;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.211.49.235;
@@ -1773,7 +1749,6 @@ allow 77.221.159.192;
 allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.232.143.248;
-allow 77.237.237.196;
 allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.236;
@@ -1859,6 +1834,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
