--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -184,6 +184,7 @@ allow 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
+allow 2605:6400:30:efb2::;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -679,19 +680,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:197a::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:df00:0:255::194;
-allow 2a0f:df00:0:255::195;
-allow 2a0f:df00:0:255::196;
-allow 2a0f:df00:0:255::197;
-allow 2a0f:df00:0:255::198;
-allow 2a0f:df00:0:255::199;
-allow 2a0f:df00:0:255::200;
-allow 2a0f:df00:0:255::201;
-allow 2a0f:df00:0:255::202;
-allow 2a0f:df00:0:255::203;
-allow 2a0f:df00:0:255::204;
-allow 2a0f:df00:0:255::205;
-allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
@@ -700,6 +688,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
