--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -62,6 +62,7 @@ allow 107.189.1.80;
 allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
+allow 107.189.2.248;
 allow 107.189.28.199;
 allow 107.189.30.236;
 allow 107.189.30.69;
@@ -152,6 +153,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.138.161.171;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.74.202;
 allow 162.251.5.152;
@@ -488,6 +490,7 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.212;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
@@ -676,7 +679,6 @@ allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
-allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
@@ -900,6 +902,7 @@ allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
+allow 205.185.115.216;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.121.170;
@@ -938,30 +941,16 @@ allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
-allow 23.154.177.10;
-allow 23.154.177.11;
-allow 23.154.177.12;
-allow 23.154.177.13;
-allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
 allow 23.154.177.19;
-allow 23.154.177.2;
 allow 23.154.177.20;
 allow 23.154.177.21;
 allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
 allow 23.154.177.25;
-allow 23.154.177.3;
-allow 23.154.177.4;
-allow 23.154.177.5;
-allow 23.154.177.6;
-allow 23.154.177.7;
-allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
@@ -1317,6 +1306,7 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
@@ -1565,6 +1555,7 @@ allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
+allow 31.129.22.65;
 allow 31.42.185.134;
 allow 35.0.127.52;
 allow 37.1.201.144;
@@ -1578,6 +1569,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.209.50.50;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1710,7 +1702,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.204.143.183;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1734,7 +1725,6 @@ allow 66.220.242.222;
 allow 66.78.40.147;
 allow 66.78.40.160;
 allow 67.219.109.141;
-allow 70.34.254.192;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.211.49.235;
