--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,6 +120,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -270,7 +271,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -491,7 +491,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.212;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.243.218.110;
@@ -796,6 +795,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -956,19 +956,8 @@ allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
-allow 23.154.177.16;
-allow 23.154.177.17;
-allow 23.154.177.18;
-allow 23.154.177.19;
-allow 23.154.177.20;
-allow 23.154.177.21;
-allow 23.154.177.22;
-allow 23.154.177.23;
-allow 23.154.177.24;
-allow 23.154.177.25;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -986,12 +975,11 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::1;
+allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::1;
+allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
@@ -1584,6 +1572,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 3.217.43.59;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1677,7 +1666,7 @@ allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.122.36;
+allow 46.195.124.186;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1704,7 +1693,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 52.140.33.255;
-allow 52.200.66.44;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
